--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "push": "clasp push",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,12 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@google/clasp": "^2.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2",
     "@types/google-apps-script": "^1.0.37",
     "typescript": "^4.3.5"
   }
