--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Ivan Starodubtsev <79093493519@yandex.com>",
+  "author": "Ivan Starodubtsev <ivan-snow@outlook.com>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@google/clasp": "^2.4.1",
